--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "10.4.17",
     "postcss-cli": "11.0.0",
+    "pusher-js": "8.4.0-rc2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.4.1"
